demo/apps/hotel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camarero
  labels:
    app.kubernetes.io/name: camarero
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: camarero
      app.kubernetes.io/version: "0.0.1"
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: hotel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: camarero
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: hotel
    spec:
      containers:
      - name: yosoy
        image: lukasz/yosoy
        resources:
            requests:
              memory: "4Mi"
              cpu: "50m"
            limits:
              memory: "8Mi"
              cpu: "100m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: podinfo
          mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
---
apiVersion: v1
kind: Service
metadata:
  name: camarero
  labels:
    app.kubernetes.io/name: camarero
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: camarero
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cocinera
  labels:
    app.kubernetes.io/name: cocinera
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: cocinera
      app.kubernetes.io/version: "0.0.1"
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: hotel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cocinera
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: hotel
    spec:
      containers:
      - name: yosoy
        image: lukasz/yosoy
        resources:
            requests:
              memory: "4Mi"
              cpu: "50m"
            limits:
              memory: "8Mi"
              cpu: "100m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: podinfo
          mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
---
apiVersion: v1
kind: Service
metadata:
  name: cocinera
  labels:
    app.kubernetes.io/name: cocinera
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: cocinera
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doncella
  labels:
    app.kubernetes.io/name: doncella
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: doncella
      app.kubernetes.io/version: "0.0.1"
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: hotel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: doncella
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: hotel
    spec:
      containers:
      - name: yosoy
        image: lukasz/yosoy
        resources:
            requests:
              memory: "4Mi"
              cpu: "50m"
            limits:
              memory: "8Mi"
              cpu: "100m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: podinfo
          mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
---
apiVersion: v1
kind: Service
metadata:
  name: doncella
  labels:
    app.kubernetes.io/name: doncella
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: doncella
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hotel
  ports:
    - protocol: TCP
      port: 80
